--- a/src/components/Hello/Hello.css
+++ b/src/components/Hello/Hello.css
@@ -9,11 +9,10 @@
 }
 
 .particles {
-  position: fixed;
-  top: 0;
-  right: 0;
-  bottom: 0;
-  left: 0;
+  position: relative;
+  width: 100vw;
+  height: 100vh;
+
   z-index: 0;
 }
 
@@ -25,23 +24,27 @@
 }
 
 .wrapper {
+  display: flex;
+  flex-direction: column;
   position: absolute;
+  justify-content: center;
+  align-items: center;
   z-index: 1;
-  width: 601px;
   font-size: 20px;
   line-height: 36px;
 }
 
-button {
+.first_button {
   color: #ffffff;
   border: 2px solid #ffffff;
   box-sizing: inherit;
   cursor: pointer;
-  display: inline-block;
-  font-size: 18pt;
+  display: flex;
+  justify-content: space-between;
+  width: 180px;
+  font-size: 16pt;
   font-weight: 600;
-  padding: 12px 50px 12px 20px;
-  transition: all 0.5s;
+  padding: 12px 20px 12px 20px;
   margin-bottom: 53px;
   background-color: transparent;
 }
@@ -49,4 +52,14 @@ button {
 button:hover {
   background-color: #04c2c9;
   border: 2px solid #04c2c9;
+}
+
+.arrow {
+  fill: white;
+  transition: transform 0.3s;
+}
+
+.arrowRotate {
+  transform: rotate(90deg);
+  transition: transform 0.3s;
 }
