--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -1,9 +1,10 @@
 .navbar {
+  display: flex;
+  align-items: center;
   position: fixed;
   top: 0;
   left: 0;
   width: 100%;
-  height: 8vh;
   /*background-color: #1b242f;*/
   z-index: 100;
 }
@@ -12,7 +13,7 @@
   display: flex;
   justify-content: flex-end;
   align-items: center;
-  width: 95vw;
+  width: 100vw;
 }
 
 .navbar_navig_items ul {
@@ -36,4 +37,34 @@
   color: #e31b6d;
   font-weight: 800;
   border-bottom: 2px solid #e31b6d;
+}
+
+@media (max-width: 768px) {
+  .drawerToggleButton {
+    height: 100%;
+    margin-right: 5vw;
+  }
+
+  .navbar_navig_items {
+    display: none;
+  }
+  .navbar {
+    background-color: #1b242f;
+    height: 6vh;
+    z-index: 300;
+  }
+
+  .navbar_navig {
+    width: 100vw;
+  }
+}
+
+@media (min-width: 769px) {
+  .drawerToggleButton {
+    display: none;
+  }
+
+  .navbar {
+    height: 8vh;
+  }
 }
