--- a/src/components/SideDrawer/SideDrawer.css
+++ b/src/components/SideDrawer/SideDrawer.css
@@ -1,12 +1,17 @@
 .side-drawer {
-  height: 100%;
-  background-color: #333333;
-  box-shadow: 2px 0px 5px rgba(0, 0, 0, 0.5);
+  box-shadow: 1px 1px 7px rgba(0, 0, 0, 0.5);
   position: fixed;
-  top: 0;
+  top: 6vh;
   left: 0;
-  width: 400px;
+  width: 100%;
+  height: 30vh;
   z-index: 200;
+  transform: translatey(-31vh);
+  transition: transform 0.2s ease-out;
+}
+
+.side-drawer.open {
+  transform: translatey(0);
 }
 
 .side-drawer ul {
@@ -32,4 +37,18 @@
 .side-drawer a:hover,
 .side-drawer a:active {
   color: #e31b6d;
+}
+
+@media (max-width: 768px) {
+  .side-drawer ul {
+    justify-content: space-around;
+    background-color: #333333;
+    margin: 0px;
+  }
+}
+
+@media (min-width: 769px) {
+  .side-drawer {
+    display: none;
+  }
 }
