--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,10 @@
 html {
   height: 100%;
+  margin: 0px;
+  padding: 0px;
+  width: 100vw;
+  overflow-y: overlay;
+  scroll-behavior: smooth;
 }
 
 body {
