--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -25,7 +25,7 @@
 }
 
 .navbar_navig_items a {
-  color: white;
+  color: #fefefe;
   text-decoration: none;
   font-size: 1.3rem;
   margin: 0 20px;
