--- a/src/pages/About/About.css
+++ b/src/pages/About/About.css
@@ -1,6 +1,5 @@
 .container2 {
   width: 100vw;
-  height: 100vh;
   background-color: #ffffff;
   display: flex;
   justify-content: center;
@@ -13,7 +12,7 @@
   width: 80vw;
 }
 
-.titleAbout {
+.titlePage {
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -21,7 +20,7 @@
   margin-top: 100px;
 }
 
-.titleAbout h1 {
+.titlePage h1 {
   color: #45474a;
   margin: 0px;
   font-size: 3rem;
@@ -41,6 +40,7 @@
   display: flex;
   justify-content: space-around;
   align-items: flex-start;
+  margin-bottom: 75px;
 }
 
 .about_description {
@@ -91,11 +91,7 @@
   box-shadow: 0 8px 16px 0 rgba(0, 0, 0, 0.2);
 }
 
-@media only screen and (max-width: 768px) {
-  .container2 {
-    height: 94vh;
-  }
-
+@media only screen and (max-width: 968px) {
   .about {
     flex-direction: column;
   }
