--- a/src/pages/Contact/Contact.css
+++ b/src/pages/Contact/Contact.css
@@ -94,3 +94,9 @@ textarea {
   background-color: #04c2c9;
   border: 2px solid #04c2c9;
 }
+
+@media only screen and (max-width: 968px) {
+  .contact_form {
+    width: 90vw;
+  }
+}
