--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -4,16 +4,23 @@
   position: fixed;
   top: 0;
   left: 0;
-  width: 100%;
+  width: 100vw;
   background-color: #1b242f;
   z-index: 100;
+  transform: translatey(-60px);
+  transition: transform 0.4s ease-out;
+  transition-delay: 1000ms;
+}
+
+.navbar.open {
+  transform: translatey(0);
 }
 
 .navbar_navig {
   display: flex;
   justify-content: flex-end;
   align-items: center;
-  width: 100vw;
+  width: 95vw;
 }
 
 .navbar_navig_items ul {
@@ -35,12 +42,10 @@
 
 .navbar_navig_links:hover {
   border-bottom: 2px solid #e31b6d;
-  transition: border-bottom 0.5s ease-in-out;
 }
 
 .navbar_navig_links--active {
   border-bottom: 2px solid #e31b6d;
-  transition: border-bottom 0.5s ease-in-out;
 }
 
 @media (max-width: 768px) {
