--- a/src/components/SideDrawer/SideDrawer.css
+++ b/src/components/SideDrawer/SideDrawer.css
@@ -4,9 +4,9 @@
   top: 6vh;
   left: 0;
   width: 100%;
-  height: 30vh;
+  height: 175px;
   z-index: 200;
-  transform: translatey(-31vh);
+  transform: translatey(-176px);
   transition: transform 0.2s ease-out;
 }
 
