--- a/src/pages/About/About.css
+++ b/src/pages/About/About.css
@@ -67,11 +67,12 @@
 .about_skills {
   padding: 0 50px;
   flex: 1;
+  justify-content: flex-start;
+  align-items: flex-start;
 }
 
 .container_skills {
   display: grid;
-  padding: 1em;
   gap: 1em;
   grid-template-columns: repeat(auto-fill, minmax(120px, 1fr));
 }
