--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -4,22 +4,7 @@ footer {
   justify-content: center;
   background: #1b242f;
   height: 250px;
-}
-
-.footer_icons {
-  display: flex;
-  justify-content: center;
-}
-
-.footer_icon {
-  display: flex;
-  justify-content: space-around;
-  align-items: center;
-  background: #8f9aa7;
-  cursor: pointer;
-  height: 55px;
-  margin: 0 15px;
-  width: 55px;
+  z-index: 3;
 }
 
 .footer_extra {
