--- a/src/pages/Projects/Projects.css
+++ b/src/pages/Projects/Projects.css
@@ -59,6 +59,42 @@
   height: auto;
 }
 
+.project_button {
+  border: 2px solid #45474a;
+  color: #45474a;
+  width: 120px;
+  cursor: pointer;
+  padding: 10px 0px;
+  margin: 5px 20px 0 0;
+  background-color: transparent;
+  font-size: 12pt;
+  font-weight: 600;
+}
+
+.project_button:hover {
+  transition: 0.2s ease 0s;
+  color: #ffffff;
+  background-color: #45474a;
+  border: 2px solid #45474a;
+}
+
+.project_button_view {
+  color: #45474a;
+  cursor: pointer;
+  background-color: transparent;
+  font-size: 12pt;
+  font-weight: 600;
+  border: none;
+  padding: 0 0 2px 0;
+}
+
+.project_button_view:hover {
+  background-color: transparent;
+  border: none;
+  border-bottom: 2px solid #45474a;
+  font-weight: 900;
+}
+
 @media only screen and (max-width: 968px) {
   .project {
     flex-direction: column-reverse;
