added carousel for pictures in projects

--- a/src/pages/Hello/Hello.css
+++ b/src/pages/Hello/Hello.css
@@ -32,10 +32,12 @@
   z-index: 1;
   font-size: 20px;
   line-height: 36px;
+  pointer-events: none;
 }
 
 .wrapper a {
   text-decoration: none;
+  pointer-events: auto;
 }
 
 .first_button {
