--- a/src/pages/About/About.css
+++ b/src/pages/About/About.css
@@ -89,6 +89,25 @@
   padding: 10px;
 }
 
+.about_button {
+  border: 2px solid #45474a;
+  color: #45474a;
+  width: 120px;
+  cursor: pointer;
+  padding: 10px 0px;
+  margin: 5px 20px 0 0;
+  background-color: transparent;
+  font-size: 12pt;
+  font-weight: 600;
+}
+
+.about_button:hover {
+  transition: 0.2s ease 0s;
+  color: #ffffff;
+  background-color: #45474a;
+  border: 2px solid #45474a;
+}
+
 @media only screen and (max-width: 968px) {
   .about {
     flex-direction: column;
