--- a/src/pages/Contact/Contact.css
+++ b/src/pages/Contact/Contact.css
@@ -4,7 +4,13 @@
   align-items: flex-start;
   min-height: 100vh;
   width: 100vw;
-  background-color: #252934;
+  /* background-color: #252934; */
+  background: rgb(35, 39, 48);
+  background: linear-gradient(
+    45deg,
+    rgba(35, 39, 48, 1) 0%,
+    rgba(50, 56, 71, 1) 100%
+  );
   z-index: 3;
 }
 
