--- a/src/pages/Projects/Projects.css
+++ b/src/pages/Projects/Projects.css
@@ -3,7 +3,13 @@
   justify-content: center;
   align-items: center;
   width: 100vw;
-  background-color: #f5f5f5;
+  /* background-color: #f5f5f5; */
+  background: rgb(237, 237, 237);
+  background: linear-gradient(
+    45deg,
+    rgba(237, 237, 237, 1) 0%,
+    rgba(255, 255, 255, 1) 100%
+  );
   z-index: 3;
 }
 
