--- a/src/pages/Hello/Hello.css
+++ b/src/pages/Hello/Hello.css
@@ -68,6 +68,10 @@ button:hover {
   border: 2px solid #04c2c9;
 }
 
+button:active {
+  outline: 0;
+}
+
 .arrow {
   fill: white;
   transition: transform 0.3s;
