--- a/src/pages/Hello/Hello.css
+++ b/src/pages/Hello/Hello.css
@@ -2,11 +2,20 @@
   width: 100vw;
   height: 100vh;
   /* background-color: #252934; */
-  background: rgb(35, 39, 48);
-  background: linear-gradient(
-    45deg,
-    rgba(35, 39, 48, 1) 0%,
-    rgba(50, 56, 71, 1) 100%
+  background-image: linear-gradient(
+    to left bottom,
+    #171a21,
+    #1b1f27,
+    #1f232d,
+    #242833,
+    #282d39,
+    #282c38,
+    #272c38,
+    #272b37,
+    #222530,
+    #1d2029,
+    #181a22,
+    #13151b
   );
   display: flex;
   justify-content: center;
