--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -1,10 +1,12 @@
 footer {
+  position: absolute;
+  width: 100%;
   display: flex;
   flex-direction: column;
   justify-content: center;
   background: #1b242f;
   height: 250px;
-  z-index: 3;
+  z-index: 10;
 }
 
 .footer_extra {
@@ -12,5 +14,5 @@ footer {
   justify-content: center;
   color: #8f9aa7;
   font-size: 10pt;
-  opacity: 0.6;
+  opacity: 0.7;
 }
