--- a/src/pages/About/About.css
+++ b/src/pages/About/About.css
@@ -1,5 +1,4 @@
 .container2 {
-  min-height: 100vh;
   width: 100%;
   /* background-color: #ffffff; */
   display: flex;
@@ -7,13 +6,25 @@
   align-items: flex-start;
   text-align: center;
   z-index: 3;
+  position: relative;
+  overflow: hidden;
+}
 
+.container2::before {
+  content: ' ';
+  position: fixed;
+  width: 100%;
+  height: 100%;
+  top: 0;
+  left: 0;
+  background-color: white;
   background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' version='1.1' xmlns:xlink='http://www.w3.org/1999/xlink' xmlns:svgjs='http://svgjs.com/svgjs' width='1440' height='560' preserveAspectRatio='none' viewBox='0 0 1440 560'%3e%3cg mask='url(%26quot%3b%23SvgjsMask2956%26quot%3b)' fill='none'%3e%3crect width='1440' height='560' x='0' y='0' fill='url(%23SvgjsLinearGradient2957)'%3e%3c/rect%3e%3cpath d='M1440 0L1179.8600000000001 0L1440 260.51z' fill='rgba(255%2c 255%2c 255%2c .1)'%3e%3c/path%3e%3cpath d='M1179.8600000000001 0L1440 260.51L1440 406.56L693.8200000000002 0z' fill='rgba(255%2c 255%2c 255%2c .075)'%3e%3c/path%3e%3cpath d='M693.8199999999999 0L1440 406.56L1440 466.81L477.5899999999999 0z' fill='rgba(255%2c 255%2c 255%2c .05)'%3e%3c/path%3e%3cpath d='M477.5899999999999 0L1440 466.81L1440 518.08L284.4799999999999 0z' fill='rgba(255%2c 255%2c 255%2c .025)'%3e%3c/path%3e%3cpath d='M0 560L610.27 560L0 360.90999999999997z' fill='rgba(0%2c 0%2c 0%2c .1)'%3e%3c/path%3e%3cpath d='M0 360.90999999999997L610.27 560L961.02 560L0 308.28z' fill='rgba(0%2c 0%2c 0%2c .075)'%3e%3c/path%3e%3cpath d='M0 308.28L961.02 560L1045.83 560L0 225.92999999999998z' fill='rgba(0%2c 0%2c 0%2c .05)'%3e%3c/path%3e%3cpath d='M0 225.93L1045.83 560L1166.4399999999998 560L0 133.53z' fill='rgba(0%2c 0%2c 0%2c .025)'%3e%3c/path%3e%3c/g%3e%3cdefs%3e%3cmask id='SvgjsMask2956'%3e%3crect width='1440' height='560' fill='white'%3e%3c/rect%3e%3c/mask%3e%3clinearGradient x1='84.72%25' y1='-39.29%25' x2='15.28%25' y2='139.29%25' gradientUnits='userSpaceOnUse' id='SvgjsLinearGradient2957'%3e%3cstop stop-color='rgba(181%2c 181%2c 181%2c 1)' offset='0'%3e%3c/stop%3e%3cstop stop-color='rgba(246%2c 246%2c 246%2c 1)' offset='0.6'%3e%3c/stop%3e%3cstop stop-color='rgba(4%2c 194%2c 201%2c 1)' offset='1'%3e%3c/stop%3e%3c/linearGradient%3e%3c/defs%3e%3c/svg%3e");
 
   background-repeat: no-repeat;
   background-position: center center;
   background-size: cover;
-  background-attachment: fixed;
+  will-change: transform;
+  z-index: -1;
 }
 
 .wrapper2 {
