--- a/src/pages/Contact/Contact.css
+++ b/src/pages/Contact/Contact.css
@@ -3,7 +3,7 @@
   justify-content: center;
   align-items: flex-start;
   min-height: 100vh;
-  width: 100vw;
+  width: 100%;
   /* background-color: #252934; */
   background: rgb(35, 39, 48);
   background: linear-gradient(
