--- a/src/pages/Hello/Hello.css
+++ b/src/pages/Hello/Hello.css
@@ -1,5 +1,5 @@
 .container {
-  width: 100vw;
+  width: 100%;
   height: 100vh;
   /* background-color: #252934; */
   background-image: linear-gradient(
@@ -25,7 +25,7 @@
 
 .particles {
   position: relative;
-  width: 100vw;
+  width: 100%;
   height: 100vh;
 
   z-index: 0;
