--- a/src/pages/About/About.css
+++ b/src/pages/About/About.css
@@ -14,7 +14,7 @@
   content: ' ';
   position: fixed;
   width: 100%;
-  height: 100%;
+  height: 100vh;
   top: 0;
   left: 0;
   background-color: white;
