--- a/src/pages/About/About.css
+++ b/src/pages/About/About.css
@@ -40,7 +40,15 @@
 }
 
 .titlePage h1 {
-  color: #45474a;
+  background: rgb(0, 137, 156);
+  background: linear-gradient(
+    102deg,
+    rgba(0, 137, 156, 1) 0%,
+    rgba(0, 157, 185, 1) 100%
+  );
+  -webkit-background-clip: text;
+  background-clip: text;
+  -webkit-text-fill-color: transparent;
   margin: 0px;
   font-size: 3rem;
   font-weight: 600;
@@ -49,8 +57,13 @@
 }
 
 .bottom_border {
-  margin: 25px 0 0px 0;
-  background: #45474a;
+  margin: 15px 0 0px 0;
+  background: rgb(0, 137, 156);
+  background: linear-gradient(
+    102deg,
+    rgba(0, 137, 156, 1) 0%,
+    rgba(0, 157, 185, 1) 100%
+  );
   width: 110px;
   height: 4px;
 }
@@ -113,7 +126,7 @@
   width: 120px;
   cursor: pointer;
   padding: 10px 0px;
-  margin: 5px 20px 0 0;
+  margin-top: 25px;
   background-color: #e31b6d;
   letter-spacing: 3px;
   font-size: 12pt;
