--- a/src/pages/Projects/Projects.css
+++ b/src/pages/Projects/Projects.css
@@ -69,9 +69,9 @@
 .project_tag {
   text-transform: uppercase;
   font-weight: 600;
-  color: #c0c0c0;
+  color: #858585;
   padding-bottom: 15px;
-  border-bottom: 1px solid #c0c0c0;
+  border-bottom: 1px solid #858585;
 }
 
 .project_description {
